@@ -1,5 +1,7 @@
 Revision history for Perl extension Net::SSH2.
 
+        - compile on gcc with '-DPERL_GCC_PEDANTIC -std=c89 -pedantic-errors -Wno-long-long' to enforce maximum compatibility with C89 (RT#87069)
+
 0.48  2013-02-20 20:58:18
         - fix builds on non-threaded perls (mauke: Lukas Mai)
         - set default extra libs for Win32 (kmx)
